wcf service for local data

--- a/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
+++ b/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Airfield.cs" />
     <Compile Include="Capacity.cs" />
     <Compile Include="Flight.cs" />
+    <Compile Include="IFlightDataService.cs" />
     <Compile Include="Lookups.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
