--- a/LogbookApp/packages/repositories.config
+++ b/LogbookApp/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\LogbookApp.Data.LocalOData\packages.config" />
   <repository path="..\LogbookApp.Data\packages.config" />
   <repository path="..\LogbookApp.InitSqlite\packages.config" />
   <repository path="..\LogbookApp\packages.config" />
