--- a/WCFData/WCFData.EntityFramework/App.config
+++ b/WCFData/WCFData.EntityFramework/App.config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="PilotsLogBookContainer" connectionString="metadata=res://*/PilotsLogBook.csdl|res://*/PilotsLogBook.ssdl|res://*/PilotsLogBook.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(localdb)\Projects;Initial Catalog=pilotsLogbookDB_local;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False&quot;" providerName="System.Data.EntityClient" />
+    <add name="PilotsLogBookContainer" connectionString="metadata=res://*/PilotsLogBook.csdl|res://*/PilotsLogBook.ssdl|res://*/PilotsLogBook.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(localdb)\Projects;Initial Catalog=pilotsLogbookDB_local;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
