--- a/WCFData/WCFData.WCFService/Web.config
+++ b/WCFData/WCFData.WCFService/Web.config
@@ -1,28 +1,35 @@
 <?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="PilotsLogBookContainer" connectionString="metadata=res://*/PilotsLogBook.csdl|res://*/PilotsLogBook.ssdl|res://*/PilotsLogBook.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(localdb)\Projects;Initial Catalog=pilotsLogbookDB_local;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False&quot;" providerName="System.Data.EntityClient" />
+    <add name="PilotsLogBookContainer" connectionString="metadata=res://*/PilotsLogBook.csdl|res://*/PilotsLogBook.ssdl|res://*/PilotsLogBook.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(localdb)\Projects;Initial Catalog=pilotsLogbookDB_local;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
+  <!--
+    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.5"/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
         <behavior>
           <!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
-          <serviceMetadata httpGetEnabled="true" />
+          <serviceMetadata httpGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" aspNetCompatibilityEnabled="true" />
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" aspNetCompatibilityEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
-  <runtime>
- 
-  </runtime>
+  <runtime/>
 </configuration>
