--- a/LogbookApp/LogbookApp/LogbookApp.csproj
+++ b/LogbookApp/LogbookApp/LogbookApp.csproj
@@ -118,6 +118,7 @@
     <Compile Include="ViewModel\AircraftViewModel.cs" />
     <Compile Include="ViewModel\DelegateCommand.cs" />
     <Compile Include="ViewModel\FlightDetailPageViewModel.cs" />
+    <Compile Include="ViewModel\LookupViewModelBase.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="Views\AircraftBasicPage.xaml.cs">
@@ -126,6 +127,10 @@
     <Compile Include="Views\AircraftListBasicPage.xaml.cs">
       <DependentUpon>AircraftListBasicPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\AircraftTypeBasicPage.xaml.cs">
+      <DependentUpon>AircraftTypeBasicPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\AircraftTypeViewModel.cs" />
     <Compile Include="Views\FlightDetailPage1.xaml.cs">
       <DependentUpon>FlightDetailPage1.xaml</DependentUpon>
     </Compile>
@@ -171,6 +176,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\AircraftListBasicPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AircraftTypeBasicPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
