--- a/LogbookApp/LogbookApp/LogbookApp.csproj
+++ b/LogbookApp/LogbookApp/LogbookApp.csproj
@@ -131,6 +131,11 @@
       <DependentUpon>AircraftTypeBasicPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\AircraftTypeViewModel.cs" />
+    <Compile Include="Views\AirfieldBasicPage.xaml.cs">
+      <DependentUpon>AirfieldBasicPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\AirfieldViewModel.cs" />
+    <Compile Include="Commands\FlightAirfieldActionCommand.cs" />
     <Compile Include="Views\FlightDetailPage1.xaml.cs">
       <DependentUpon>FlightDetailPage1.xaml</DependentUpon>
     </Compile>
@@ -180,6 +185,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\AircraftTypeBasicPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AirfieldBasicPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
