multi on aircraft class

--- a/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
+++ b/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
@@ -107,6 +107,7 @@
   <ItemGroup>
     <Compile Include="AcType.cs" />
     <Compile Include="Aircraft.cs" />
+    <Compile Include="AircraftClass.cs" />
     <Compile Include="Airfield.cs" />
     <Compile Include="Capacity.cs" />
     <Compile Include="Flight.cs" />
