--- a/LogbookApp/LogbookApp/LogbookApp.csproj
+++ b/LogbookApp/LogbookApp/LogbookApp.csproj
@@ -174,6 +174,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\3937008655_355989317c.jpg" />
+    <Content Include="Assets\3937820236_de190f8378.jpg" />
     <Content Include="Assets\FSi_C152r_5.jpg" />
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\SmallLogo.png" />
