--- a/LogbookApp/FlightTimes/FlightTimes.csproj
+++ b/LogbookApp/FlightTimes/FlightTimes.csproj
@@ -110,6 +110,7 @@
     <Compile Include="FlightCalcTotals.cs" />
     <Compile Include="FlightTimeCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimesExtensions.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
