--- a/LogbookApp/LogbookApp/packages.config
+++ b/LogbookApp/LogbookApp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Callisto" version="1.2.8" targetFramework="win" />
   <package id="Microsoft.Data.OData.WindowsStore" version="5.0.0" targetFramework="win" />
   <package id="Microsoft.Data.Services.Client.WindowsStore" version="5.0.0" targetFramework="win" />
   <package id="sqlite-net" version="1.0.5" targetFramework="winrt45" />
